examples/type_system/failing/146_constructor_pattern_arity_some_too_many.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E085: constructor-pattern arity mismatch (expects 1 field, pattern provides 2).

type BoxI = BoxI(Int) | EmptyI

fn main() {
    let x = BoxI(1)
    let _y = match x {
        BoxI(a, b) -> a,
        EmptyI -> 0,
    }
}
